# FastApi-Abstract

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  requirements.txt
alembic/: env.py
services/background/: main.py  pyproject.toml
services/background/core/: __init__.py  celery_app.py  celeryconfig.py  config.py
services/background/src/routes/: __init__.py  notification.py
services/background/src/schemas/: __init__.py  email_model.py
services/background/src/tasks/: __init__.py  cleanup.py  email.py
services/background/src/utils/: __init__.py  mailer.py
services/user-service/: Dockerfile  main.py  pyproject.toml
services/user-service/alembic/versions/: 2b4e73f83e57_update_user_model.py  5d10fdab698b_add_datetime_fields_to_user_models.py  6eda6645f042_add_auth_models.py  c66ef2d28be6_update_user_model.py
services/user-service/core/: config.py
services/user-service/db/: session.py
services/user-service/db/models/: auth.py  users.py
services/user-service/db/services/: delete.py  read.py  update.py  write.py
services/user-service/exceptions/: handler.py  http_exceptions.py
services/user-service/notific_ocean/: notification_manager.py
services/user-service/src/: __init__.py
services/user-service/src/ctrls/: auth.py  users.py
services/user-service/src/dependencies/: users.py
services/user-service/src/routes/: auth.py  users.py
services/user-service/src/schemas/: __init__.py  auth.py  users.py
services/user-service/src/user_service/: main.py
(+138 files in other folders)
